# Cnn-In-Cpp

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/CnnInCpp/: CnnInCpp.h
include/CnnInCpp/Layers/: BatchNorm2D.h  Concat.h  Conv2D.h  Dense.h  Dropout.h  ElementwiseAdd.h  Flatten.h  FusedConvBNReLU.h  Layer.h  LeakyReLU.h  MaxPool2D.h  ReLU.h  Sigmoid.h  Softmax.h
include/CnnInCpp/core/: Im2Col.h  Tensor.h
include/CnnInCpp/data/: DataLoader.h  Dataset.h
include/CnnInCpp/nn/: Adam.h  Loss.h  Model.h  Optimizer.h
scripts/: run.ps1
